change default functionality

--- a/views/public/globe.pug
+++ b/views/public/globe.pug
@@ -59,7 +59,7 @@ block content
 
     init();
     animate();
-    // change(); // the thumbnails layout will changing every 10 seconds
+    // change(); // the thumbnails layout will change every 10 seconds
     // take camera outside the sphere
     setTimeout(function() {
       new TWEEN.Tween(camera.position)
