--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -356,33 +356,34 @@ block content
             i.fa.fa-lock
             | Change Password
     
-    br
-    h3.fw.text-center Email Notifications
-    br
+    if process.env.NOTIFICATION_EMAILS_ENABLED == "true"
+      br
+      h3.fw.text-center Email Notifications
+      br
 
-    form.form-horizontal(action='/account/emailNotifications', method='POST', autocomplete="off")
-      input(type='hidden', name='_csrf', value=_csrf)
-      .form-group
-        label.fw.col-sm-3.control-label(for='comments' style="font-size:16px") Comments
-        .col-sm-1
-          if user.emailNotifications.comments == true
-            input.form-control(type='checkbox', name='comments', id='comments', class='email-options', checked='true')
-          else
-            input.form-control(type='checkbox', name='comments', id='comments', class='email-options')
-      .form-group
-        label.fw.col-sm-3.control-label(for='reacts' style="font-size:16px") Reacts
-        .col-sm-1
-          if user.emailNotifications.reacts == true
-            input.form-control(type='checkbox', name='reacts', id='reacts', class='email-options', checked='true')
-          else
-            input.form-control(type='checkbox', name='reacts', id='reacts', class='email-options')
-      .form-group
-        label.fw.col-sm-3.control-label(for='subscriptions' style="font-size:16px") Subscriptions
-        .col-sm-1
-          if user.emailNotifications.subscriptions == true
-            input.form-control(type='checkbox', name='subscriptions', id='subscriptions', class='email-options', checked='true')
-          else
-            input.form-control(type='checkbox', name='subscriptions', id='subscriptions', class='email-options')
+      form.form-horizontal(action='/account/emailNotifications', method='POST', autocomplete="off")
+        input(type='hidden', name='_csrf', value=_csrf)
+        .form-group
+          label.fw.col-sm-3.control-label(for='comments' style="font-size:16px") Comments
+          .col-sm-1
+            if user.emailNotifications.comments == true
+              input.form-control(type='checkbox', name='comments', id='comments', class='email-options', checked='true')
+            else
+              input.form-control(type='checkbox', name='comments', id='comments', class='email-options')
+        .form-group
+          label.fw.col-sm-3.control-label(for='reacts' style="font-size:16px") Reacts
+          .col-sm-1
+            if user.emailNotifications.reacts == true
+              input.form-control(type='checkbox', name='reacts', id='reacts', class='email-options', checked='true')
+            else
+              input.form-control(type='checkbox', name='reacts', id='reacts', class='email-options')
+        .form-group
+          label.fw.col-sm-3.control-label(for='subscriptions' style="font-size:16px") Subscriptions
+          .col-sm-1
+            if user.emailNotifications.subscriptions == true
+              input.form-control(type='checkbox', name='subscriptions', id='subscriptions', class='email-options', checked='true')
+            else
+              input.form-control(type='checkbox', name='subscriptions', id='subscriptions', class='email-options')
 
   script.
     //.delete-user-thumbnail-form
