working on docs

--- a/views/public/docs.pug
+++ b/views/public/docs.pug
@@ -34,7 +34,7 @@ block content
             br
             br
 
-            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            iframe(width='560', height='315', src='https://newtube.app/embed/7KH5xau', frameborder='0', allowfullscreen='')
 
             p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Use NodeTube
 
@@ -101,5 +101,16 @@ block content
             iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
 
             p.videoHeader.fw(style="font-size:24px") How To Contribute To The NodeTube Codebase
+
+            br
+            br
+            br
+            br
+            br
+
+            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+
+            p.videoHeader.fw(style="font-size:24px") How To Support NodeTube
+
 
             //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
