--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -295,6 +295,8 @@ block content
             i.fa.fa-pencil
             | Delete
 
+    // EMAIL FUNCTIONALITY
+
     // IF USER HAS CONFIRMED EMAIL
     if user.email && user.emailConfirmed
       h2.fw.text-center Confirmed Email
@@ -306,36 +308,37 @@ block content
           .col-sm-7
             h5 #{user.email}
 
-    // Turning off for the time being, it should be conditional based on a flag
-    //if user.email && !user.emailConfirmed
-    //  h3.text-center Save Email
-    //    br
-    //  form.form-horizontal(action='/account/email', method='POST')
-    //    input(type='hidden', name='_csrf', value=_csrf)
-    //    .form-group
-    //      label.col-sm-3.control-label(for='email') Email Address
-    //      .col-sm-7
-    //        input.form-control(type='email', name='email', id='email' value=`${user.email}`)
-    //    .form-group
-    //      .col-sm-offset-3.col-sm-4
-    //        button.btn.btn-primary(type='submit')
-    //          i.fa.fa-envelope
-    //          | Resend Confirmation Email
+    // IS USER HAS PENDING CONFIRMATION EMAIL
+    if user.email && !user.emailConfirmed
+      h3.fw.text-center Save Email
+        br
+      form.form-horizontal(action='/account/email', method='POST')
+        input(type='hidden', name='_csrf', value=_csrf)
+        .form-group
+          label.fw.col-sm-3.control-label(for='email') Email Address
+          .col-sm-7
+            input.form-control(type='email', name='email', id='email' value=`${user.email}`)
+        .form-group
+          .col-sm-offset-3.col-sm-4
+            button.btn.btn-primary(type='submit')
+              i.fa.fa-envelope
+              | Resend Confirmation Email
 
-    //if !user.email
-    //  h3.text-center Save Email
-    //    br
-    //  form.form-horizontal(action='/account/email', method='POST')
-    //    input(type='hidden', name='_csrf', value=_csrf)
-    //    .form-group
-    //      label.col-sm-3.control-label(for='email') Email Address
-    //      .col-sm-7
-    //        input.form-control(type='email', name='email', id='email')
-    //    .form-group
-    //      .col-sm-offset-3.col-sm-4
-    //        button.btn.btn-primary(type='submit')
-    //          i.fa.fa-envelope
-    //          | Send Confirmation Email
+    // IF USER HAS NOT SAVED EMAIL
+    if !user.email
+      h3.fw.text-center Save Email
+        br
+      form.form-horizontal(action='/account/email', method='POST')
+        input(type='hidden', name='_csrf', value=_csrf)
+        .form-group
+          label.fw.col-sm-3.control-label(for='email') Email Address
+          .col-sm-7
+            input.form-control(type='email', name='email', id='email')
+        .form-group
+          .col-sm-offset-3.col-sm-4
+            button.btn.btn-primary(type='submit')
+              i.fa.fa-envelope
+              | Send Confirmation Email
     br
     h3.fw.text-center Change Password
     br
