--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -58,3 +58,27 @@ block content
 
                         h3.
                                 For copyright claims, or any other reason, please contact newtubedotapp[at]gmail.com
+
+                        br
+                        br
+
+                        h4.fw Support NodeTube Development:
+
+                        h5.fw Donate Via PayPal
+
+                        h5.fw Join As A Plus User
+
+
+                        br
+
+                        h3.fw Instance Details:
+
+                        h4.fw Max Content Rating Allowed: Safe For Work
+
+                        h4.fw Max Upload Size (Free Account): 500 MB
+
+                        h4.fw Max Upload Size (Plus Account): 2GB
+
+                        h4.fw Livestreaming Supported (Plus Feature)
+
+                        h4.fw Copyright Contact: newtubedotapp[at]gmail.com
