--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -60,6 +60,10 @@ block content
 
   div.container(style="text-align:center")
 
+    .landingVideo
+      iframe(width='560', height='315', src='https://nodetube.live/embed/EhwoFsu', frameborder='0', allowfullscreen='')
+
+
     h1.lead-header.fw Welcome To #{brandName}
     h2.tagline-header.fw The internet's best media hosting for creators and users
     hr
