--- a/views/media.pug
+++ b/views/media.pug
@@ -128,11 +128,11 @@ block content
 
             // EXTRA BUTTONS
             div
-                if upload.fileType == 'image' || upload.fileType == 'video'
-                    div.change-size-button.increase-size
-                        h1(style="cursor:pointer") +
-                    div.change-size-button.decrease-size
-                        h1(style="cursor:pointer") -
+                //if upload.fileType == 'image' || upload.fileType == 'video'
+                //    div.change-size-button.increase-size
+                //        h1(style="cursor:pointer") +
+                //    div.change-size-button.decrease-size
+                //        h1(style="cursor:pointer") -
                 div.change-size-button
                     h2.download-button
                         i.download-icon.fa.fa-download(aria-hidden="true" style="cursor:pointer")
