--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -60,8 +60,8 @@ block content
 
   div.container(style="text-align:center")
 
-    .landingVideo
-      iframe(width='560', height='315', src='https://nodetube.live/embed/EhwoFsu', frameborder='0', allowfullscreen='')
+    .landingVideo(style="margin-top:0px;padding-top:70px;")
+      iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
 
 
     h1.lead-header.fw Welcome To #{brandName}
