--- a/views/media.pug
+++ b/views/media.pug
@@ -129,10 +129,10 @@ block content
             // EXTRA BUTTONS
             div
                 if upload.fileType == 'image' || upload.fileType == 'video'
-                    div.change-size-button.increase-size
-                        h1(style="cursor:pointer") +
-                    div.change-size-button.decrease-size
-                        h1(style="cursor:pointer") -
+                    //div.change-size-button.increase-size
+                    //    h1(style="cursor:pointer") +
+                    //div.change-size-button.decrease-size
+                    //    h1(style="cursor:pointer") -
                 div.change-size-button
                     h2.download-button
                         i.download-icon.fa.fa-download(aria-hidden="true" style="cursor:pointer")
@@ -242,10 +242,9 @@ block content
                 i.fa.fa-info.fw
                 | Copy Details
 
-            button.btn.btn-default.copy-button(style="padding:4px 12px" data-clipboard-text=`${upload.title} by ${upload.uploader.channelName} \n\n ${url} \n\n #${brandName}`)
+            button.btn.btn-default.copy-button(style="padding:4px 12px" data-clipboard-text=`${upload.title} by ${upload.uploader.channelName || upload.uploader.channelUrl} \n\n ${url} \n\n #${brandName}`)
                 i.fa.fa-info.fw
                 | With User Info
-
 
             // COMMENT SECTION AND FORM
             div
