--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -14,7 +14,7 @@ footer
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://riot.im/app/#/room/#nodetube:matrix.org" target="_blank") Riot.im
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://twitter.com/nodetube_org" target="_blank") Twitter
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://twitter.com/newtube_app" target="_blank") Twitter
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/nodetube" target="_blank") Reddit
 
