update footer and about page

--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -21,40 +21,50 @@ block content
         .container
                 div(style="padding-top:75px;max-width:629px;margin:0 auto;")
 
-                        h3 NewTube is powered by NodeTube, which was created to allow anyone with basic technical skills to run their own media hosting platform
+                        h3 NewTube is a YouTube alternative powered by open-source software. NewTube is designed to be as efficient and effortless as possible from a user's perspective
                         br
-                        h3(style="display:inline")  Please check out the
-                                a(style="margin-left:5px" href="https://github.com/mayeaux/nodetube") GitHub Repo
-                        h3(style="display:inline") &nbspto see the source code and learn more about the application
+                        h3 And since the software is open source anyone can run their own version of the site. The software has also been designed to be simple and easy to use, both to contribute to and to administer
+                        br
+                        h3 I'm going to be creating a video tutorial series to show the features of NewTube, and also a series on how to run the software to have your own YouTube alternative. That is coming soon
+                        br
+                        h3 Currently the best way to help support the project is to support it financially which will allow me to focus more of my productivity on this as opposed to other paid work I currently do. Best way is currently via &nbsp
+                                a(href="https://paypal.me/newtubeapp") PayPal
+                        br
+                        h3 Also following the social media at the bottom of the page and spreading the word is also a great way to help the project, thank you for the support!
+                        br
 
-                        br
-                        h3
-                                | Join us for collaboration on
-                                a.left(href='https://discord.gg/ejGah8H') Discord
-                                | ,
-                                a.left(href='https://riot.im/app/#/room/#nodetube:matrix.org') Riot.im (Matrix)
-                                |  and
-                                a.left(href='https://reddit.com/r/nodetube') Reddit
+                        //h3(style="display:inline")  Please check out the
+                        //        a(style="margin-left:5px" href="https://github.com/mayeaux/nodetube") GitHub Repo
+                        //h3(style="display:inline") &nbspto see the source code and learn more about the application
+                        //
+                        //br
+                        //h3
+                        //        | Join us for collaboration on
+                        //        a.left(href='https://discord.gg/ejGah8H') Discord
+                        //        | ,
+                        //        a.left(href='https://riot.im/app/#/room/#nodetube:matrix.org') Riot.im (Matrix)
+                        //        |  and
+                        //        a.left(href='https://reddit.com/r/nodetube') Reddit
 
                         // h3 If you find the project interesting and want to help it succeed please send the link to this live instance and the Github repo around on places like Reddit, Hacker News, Twitter, Facebook, Discord.  Self-promotion is really frowned upon on the internet and the less time I have to do bringing people’s attention to the project the more I can focus on working on improving the software
 
 
                         //h3.
                         //        Github Repo Link
-                        h3
-                                a(href="https://github.com/mayeaux/nodetube") Github Repo
-
-                        //h3.
-                        //        Live Instance Link
-                        h3
-                                a(href="https://newtube.app") Live Instance
+                        //h3
+                        //        a(href="https://github.com/mayeaux/nodetube") Github Repo
+                        //
+                        ////h3.
+                        ////        Live Instance Link
+                        //h3
+                        //        a(href="https://newtube.app") Live Instance
                         //h3
                         //        a(href="https://newtube.app") How-To
 
 
-
-                        h3.
-                                Thank you!
+                        //
+                        //h3.
+                        //        Thank you!
 
                         h3.
                                 For copyright claims, or any other reason, please contact newtubedotapp[at]gmail.com
