add instance details

--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -68,3 +68,26 @@ block content
 
                         h3.
                                 For copyright claims, or any other reason, please contact newtubedotapp[at]gmail.com
+
+                        br
+
+                        br
+                        h3.fw Instance Details:
+
+                        h4.fw File Types Supported: Video, Audio and Image
+
+                        h4.fw Max Content Rating Allowed: Safe For Work
+
+                        h4.fw Max Upload Size: 500 MB
+
+                        //h4.fw Max Upload Size (Free Account): 500 MB
+
+
+                        h4.fw Max Upload Amount: Unlimited
+
+                        //h4.fw Max Upload Size (Plus Account): 2GB
+                        //
+                        //h4.fw Livestreaming Supported (Plus Feature)
+
+                        h4.fw Copyright Contact: newtubedotapp[at]gmail.com
+
