--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -162,7 +162,7 @@ block content
 
             - Livestreaming with live chat
 
-            - YouTube Backup Functionality (COMING SOON)
+            - NewTube Recording Studio (Coming Soon)
 
             - Early access to all beta features
 
@@ -447,7 +447,7 @@ block content
         swal('Please stream to rtmp://broadcast.nodetube.live/live/' + username  + '?key=' + uploadToken + ' \n\n You will be live at https://live.nodetube.live/User/' + username)
       })
 
-
+  // stripe functionality
   if process.env.PLUS_ENABLED == 'true'
     script(src='https://checkout.stripe.com/checkout.js')
 
@@ -456,6 +456,7 @@ block content
 
       var csrf = '#{_csrf}'
 
+      /** CONFIGURE STRIPE HANDLER **/
       var handler = StripeCheckout.configure({
         key: stripeToken,
         image: 'https://newtube.app/images/full_size_logo.png',
@@ -470,6 +471,7 @@ block content
 
           $.ajax({
             type: 'POST',
+            // what is at this backend?
             url: `/api/purchase/plus`,
             data,
             success: function (data) {
@@ -487,11 +489,12 @@ block content
           }
         });
 
+      // CLICK HANDLER
       document.getElementById('customButton').addEventListener('click', function (e) {
         // Open Checkout with further options:
         handler.open({
-          name: 'NodeTube, Inc.',
-          description: 'One Month Of NodeTube Plus',
+          name: 'NewTube.',
+          description: 'One Month Of NewTube Plus',
           amount: 495,
           allowRememberMe: false
           // email: "customer@email.com"
