--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -155,7 +155,7 @@ block content
             - Access to NodeTube Recording Studio (COMING EVENTUALLY)
 
 
-          p(style="white-space:pre-line;margin-bottom:19px;").
+          p.fw(style="white-space:pre-line;margin-bottom:19px;font-size:17px;margin-top:23px;").
             - Upload file-size limit raised to 2GB
 
             - Unlisted and private uploads
