more redirect links

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -143,8 +143,8 @@ block content
       div.nt-plus.center-div.text-center
         if user.plan == 'plus'
           p Thank you so much for subscribing!
-          p This area is currently being expanded
-          p In the meantime enjoy your new features:
+          p Your support makes NewTube possible
+          p Please enjoy your new features:
           //h4 Automatic YouTube backup functionality, unlisted uploads, private uploads, 2GB upload size
           h4 Livestreaming, unlisted uploads, private uploads, 2GB upload size
 
