clearer registration message

--- a/views/account/signup.pug
+++ b/views/account/signup.pug
@@ -14,7 +14,7 @@ block content
       .form-group
         label.fw.loginHeader.col-sm-3.control-label(for='channelUrl') Channel Username
         .col-sm-7
-          input.fw.loginHeader.form-control.username(type='text', name='channelUrl', id='channelUrl', autofocus, required placeholder='Please enter your channel username')
+          input.fw.loginHeader.form-control.username(type='text', name='channelUrl', id='channelUrl', autofocus, required placeholder='Please choose your channel username')
       .form-group
         label.fw.loginHeader.col-sm-3.control-label(for='password') Password
         .col-sm-7
