--- a/views/public/docs.pug
+++ b/views/public/docs.pug
@@ -38,17 +38,7 @@ block content
 
             p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Use NodeTube
 
-            p.fw(style="font-size:18px") Popular Page, Recent Page, Media Page (No login necessary)
-
-            br
-            br
-            br
-            br
-            br
-
-            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
-
-            p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A User
+            p.fw(style="font-size:18px") Popular Page, Recent Page, Media Page,
 
             p.fw(style="font-size:18px") Uploading Videos/Audio/Images, Livestreams, Other Features
 
@@ -58,59 +48,76 @@ block content
             br
             br
 
+            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            //
+            //p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A User
+
+            //br
+            //br
+            //br
+            //br
+            //br
+            //
+            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            //
+            //p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A Plus User
+            //
+            //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
+            //
+            //br
+            //br
+            //br
+            //br
+            //br
+
             iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
 
-            p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A Plus User
+            p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Start Your Own NodeTube Instance
 
-            p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
+            p.videoHeader.fw(style="font-size:19px") How To Install NodeTube And Have Your Own YouTube Alternative
 
-            br
-            br
-            br
-            br
-            br
+            p.videoHeader.fw(style="font-size:19px") How To Administrate And Moderate Your NodeTube Instance
 
-            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            p.videoHeader.fw(style="font-size:19px") How To Contribute To The NodeTube Codebase
 
-            p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A Moderator/Admin
 
             //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
-
-
-            br
-            br
-            br
-            br
-            br
-
-
-            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
-
-            p.videoHeader.fw(style="font-size:24px") How To Install NodeTube
-
-            //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
-
-
-            br
-            br
-            br
-            br
-            br
-
-
-            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
-
-            p.videoHeader.fw(style="font-size:24px") How To Contribute To The NodeTube Codebase
-
-            br
-            br
-            br
-            br
-            br
-
-            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
-
-            p.videoHeader.fw(style="font-size:24px") How To Support NodeTube
-
+            //
+            //
+            //br
+            //br
+            //br
+            //br
+            //br
+            //
+            //
+            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            //
+            //p.videoHeader.fw(style="font-size:24px") How To Install NodeTube
+            //
+            ////p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
+            //
+            //
+            //br
+            //br
+            //br
+            //br
+            //br
+            //
+            //
+            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            //
+            //p.videoHeader.fw(style="font-size:24px") How To Contribute To The NodeTube Codebase
+            //
+            //br
+            //br
+            //br
+            //br
+            //br
+            //
+            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            //
+            //p.videoHeader.fw(style="font-size:24px") How To Support NodeTube
+            //
 
             //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
