more frontend changes

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -148,6 +148,7 @@ block content
           //h4 Automatic YouTube backup functionality, unlisted uploads, private uploads, 2GB upload size
           h4 Livestreaming, unlisted uploads, private uploads, 2GB upload size
 
+
         else
           //  - Unlisted, private and scheduled uploads
             - Built in monetization via direct payments (COMING SOON)
@@ -168,9 +169,12 @@ block content
 
             - $4.95/month, cancel at any time
 
+            - Support alternative tech that values your speech and privacy
+
           button.stripe-button-el#customButton(type="submit" class="stripe-button-el" style="visibility: visible;")
             span(style="display: block; min-height: 30px;") Buy Now
 
+        br
         br
         br
 
