--- a/views/viewPartials/popularUploadsNavbar.pug
+++ b/views/viewPartials/popularUploadsNavbar.pug
@@ -14,6 +14,6 @@ div.row
     if category == 'all'
         div.col-xs-6.col-sm-4.col-sm-2.col-md-2
             h3.fw
-                a(href=`/media/popular/${page}?media=${mediaType}&category=overview`) Categories
+                a(href=`/media/popular/${page}?media=${mediaType}&category=overview&within=24hour`) Categories
 
 hr
