--- a/views/public/docs.pug
+++ b/views/public/docs.pug
@@ -25,11 +25,11 @@ block content
     .container
         div(style="text-align:center;margin:0 auto;margin-top:60px;")
 
-            h3(style="font-size:30px;margin-bottom:27px;") NodeTube Docs
+            h3(style="font-size:30px;margin-bottom:27px;") NewTube Documentation
 
-            p.fw(style="font-size:25px;") Here are the video tutorials that you can use
+            p.fw(style="font-size:25px;") These video tutorials show how to use
 
-            p.fw(style="font-size:25px;margin-bottom:20px;") to learn how to use NodeTube's functionality
+            p.fw(style="font-size:25px;margin-bottom:20px;") #{instanceBrandName} as a user, administrator and a developer
             br
             br
             br
@@ -38,11 +38,10 @@ block content
 
             p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Use NodeTube
 
-            p.fw(style="font-size:18px") Popular Page, Recent Page, Media Page,
+            p.fw(style="font-size:18px") Popular Page, Recent Page, Media Page
 
             p.fw(style="font-size:18px") Uploading Videos/Audio/Images, Livestreams, Other Features
 
-            br
             br
             br
             br
@@ -72,52 +71,13 @@ block content
 
             iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
 
-            p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Start Your Own NodeTube Instance
+            p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Start Your Own NewTube Instance
 
-            p.videoHeader.fw(style="font-size:19px") How To Install NodeTube And Have Your Own YouTube Alternative
+            p.videoHeader.fw(style="font-size:19px") How To Install NewTube And Have Your Own YouTube Alternative
 
             p.videoHeader.fw(style="font-size:19px") How To Administrate And Moderate Your NodeTube Instance
 
-            p.videoHeader.fw(style="font-size:19px") How To Contribute To The NodeTube Codebase
+            p.videoHeader.fw(style="font-size:19px") How To Contribute To The NewTube Codebase
 
 
-            //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
-            //
-            //
-            //br
-            //br
-            //br
-            //br
-            //br
-            //
-            //
-            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
-            //
-            //p.videoHeader.fw(style="font-size:24px") How To Install NodeTube
-            //
-            ////p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
-            //
-            //
-            //br
-            //br
-            //br
-            //br
-            //br
-            //
-            //
-            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
-            //
-            //p.videoHeader.fw(style="font-size:24px") How To Contribute To The NodeTube Codebase
-            //
-            //br
-            //br
-            //br
-            //br
-            //br
-            //
-            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
-            //
-            //p.videoHeader.fw(style="font-size:24px") How To Support NodeTube
-            //
-
-            //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
+            p How To Add As Mobile App
