--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -169,7 +169,7 @@ block content
 
     div.container
         each upload in channel.uploads
-            div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:330px")
+            div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:330px;margin-top:30px;")
                 if isUser || isAdmin || ( user && user.role == 'moderator' )
                     div.editFileButtons
                         form.editLink(action="/api/upload/delete" method="POST" style="display:inline-block")
