change embed icon from share to fas fa-code

--- a/views/media.pug
+++ b/views/media.pug
@@ -138,7 +138,7 @@ block content
                         i.download-icon.fa.fa-download(aria-hidden="true" style="cursor:pointer")
                 div.change-size-button
                     h2.share-button
-                        i.share-icon.fa.fa-share(aria-hidden="true" style="cursor:pointer")
+                        i.share-icon.fas.fa-code(aria-hidden="true" style="cursor:pointer")
                 if upload.fileType == 'video' || upload.fileType == 'audio'
                     div.change-size-button(style="margin-left:0px")
                         h2.repeat-div(style="opacity:0.4")
