fixed bg issues with emojis

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -179,13 +179,13 @@ block content
         br
 
 
-    // if you're allowed to
+      // if you're allowed to
     if  user.plan == 'plus' &&  user.privs.youtubeBackup
       h3.ytBackup
         br
         br
         br
-        h3.fw.text-center YouTube Backup
+        h3.fw.text-center(style="") YouTube Backup
         br
 
         //form
