--- a/views/public/embed.pug
+++ b/views/public/embed.pug
@@ -117,7 +117,7 @@ html
           var plyr_options = {
             autoplay: true,
             clickToPlay: true,
-            controls: ['play-large', 'play', 'progress', 'current-time', 'duration', 'mute', 'volume', 'settings', 'fullscreen', 'download'],
+            controls: ['play-large', 'play', 'progress', 'current-time', 'duration', 'mute', 'volume', 'settings', 'fullscreen'],
             settings: ['speed', 'captions', 'quality', 'speed', 'loop']
           };
 
